<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>2123</width>
    <height>1406</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="global_left">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QComboBox" name="combB_directory">
         <item>
          <property name="text">
           <string>sample data</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>standard data</string>
          </property>
         </item>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QCheckBox" name="cB_auto_standard">
         <property name="text">
          <string>Automatically select standard files</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="l_td_file_nb">
         <property name="text">
          <string>File number</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="sB_td_file_nb">
         <property name="maximum">
          <number>999999999</number>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="l_td_file_to">
         <property name="text">
          <string>to</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="sB_td_file_to">
         <property name="maximum">
          <number>999999999</number>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pB_td_read_filtered">
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;faster way to read only the files speficied in the linedit Filenumbers ... to ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>Read Filtered</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="cB_autoload">
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Autoload new files which are added at the end of the actual scan list.&lt;/p&gt;&lt;p&gt;Will not load new files, in other scans, or delete removed files from scanlist.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>autload new</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pB_td_read_all">
         <property name="font">
          <font>
           <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;reads all dns datafiles found in the data directory specified in the Paths tab&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>Read All</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QTreeView" name="DNS_sample_view">
       <property name="locale">
        <locale language="English" country="UnitedStates"/>
       </property>
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
       <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
       </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::ExtendedSelection</enum>
       </property>
       <property name="uniformRowHeights">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QTreeView" name="DNS_standard_view">
       <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
       </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::ExtendedSelection</enum>
       </property>
       <property name="uniformRowHeights">
        <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="global_right">
     <item>
      <widget class="QGroupBox" name="groupBox_filter">
       <property name="toolTip">
        <string/>
       </property>
       <property name="title">
        <string>Filter:</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <widget class="QLabel" name="label_show_only">
          <property name="text">
           <string>show only:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_scans">
          <property name="text">
           <string>scans</string>
          </property>
          <property name="checked">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_cscans">
          <property name="text">
           <string>cscans</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_det_rot">
          <property name="text">
           <string>det_rot</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_sample_rot">
          <property name="text">
           <string>sample_rot</string>
          </property>
         </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
          <item>
           <widget class="QCheckBox" name="cB_filter_free">
            <property name="text">
             <string/>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLineEdit" name="lE_filter_free_text">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="minimumSize">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
              <height>16777215</height>
             </size>
            </property>
            <property name="text">
             <string>time</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_filter_standard">
       <property name="title">
        <string>Filter:</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="l_show_only">
          <property name="text">
           <string>show only:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_vanadium">
          <property name="text">
           <string>Vanadium</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_nicr">
          <property name="text">
           <string>NiCr</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="cB_filter_empty">
          <property name="text">
           <string>empty</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_check">
       <property name="toolTip">
        <string/>
       </property>
       <property name="title">
        <string>Check:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="3" column="1">
         <widget class="QPushButton" name="pB_check_last_scan">
          <property name="text">
           <string>Last scans</string>
          </property>
         </widget>
        </item>
        <item row="3" column="0" rowspan="2">
         <widget class="QSpinBox" name="sB_last_scans">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;number of scans which are selected if &amp;quot;Last scans&amp;quot; or &amp;quot;Last compl. s.&amp;quot; is clicked.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="value">
           <number>1</number>
          </property>
         </widget>
        </item>
        <item row="5" column="0" colspan="2">
         <widget class="QPushButton" name="pB_check_selected">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;checks selected files.&lt;/p&gt;&lt;p&gt;You can use multiselection with Shift and Strg.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
           <string>Check Selected</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QPushButton" name="pB_check_none">
          <property name="text">
           <string>None</string>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
         <widget class="QPushButton" name="pB_check_last_complete_scan">
          <property name="text">
           <string>Last compl. s.</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="pB_check_all">
          <property name="text">
           <string>All</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_expand">
       <property name="title">
        <string>Expand</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QPushButton" name="pB_expand_all">
          <property name="text">
           <string>All</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pB_expand_none">
          <property name="text">
           <string>None</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
